--- a/views/dap.ejs
+++ b/views/dap.ejs
@@ -55,7 +55,7 @@
                             <div class="bo " id="myaudition" style="position: relative; cursor: pointer;">
 
                                 <img width="147px" height="147px"
-                                    style="background-color: transparent; border: 3px solid #FFCA00;border-radius: 12px;max-width: 148px; max-height: 148px;"
+                                    style="background-color: transparent; border: .5px solid #FFCA00;border-radius: 12px;max-width: 148px; max-height: 148px;"
                                     src=<%=element.auditionLogo %>>
 
                                 <h6 class="content_header audition " data-id="<%=element._id %>"
@@ -74,7 +74,7 @@
 
         <h4 class="content_header">Auditions Available</h4>
 
-        <div class="boxs">
+        <div class="boxs" style="grid-gap: 0px;">
             <% if (auditions) { %>
 
                 <% auditions.forEach(element=> { %>
@@ -82,7 +82,7 @@
                     <div class="bo all" id="all" style="position: relative; cursor: pointer;">
 
                         <img width="147px" height="147px"
-                            style="border: 3px solid #FFCA00;border-radius: 12px;box-sizing: border-box; max-width: 147px; max-height: 148px;min-width: 148px; min-height: 147px;"
+                            style="border: 1.1px solid #FFCA00;border-radius: 15px;box-sizing: border-box; max-width: 147px; max-height: 148px;min-width: 148px; min-height: 147px;"
                             src=<%=element.auditionLogo %>>
 
                         <h6 class="content_header audition availableAudition" data-id="<%=element._id %>"
@@ -126,10 +126,11 @@
 
     </section>
 
-    <div class="">
+
+    <div class="" style="background-color: #fff;">
         <div class="footer_social">
             <div>
-                <p>&copy; 2021 GhenGhen </p>
+                <p><span style="color: #ddd;">&copy; 2021</span> GhenGhen </p>
             </div>
             <div class="social_icon">
                 <img src="/assest/OLIVE/fb.png" />
