--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -50,16 +50,16 @@
             <a href="/digitalauditionplatform">
                 <div class="box">
                     <img src="/assest/OLIVE/icon/Vector.png">
-                    <h5>Digital Audition Platform</h5>
+                    <h5>Digital Audition <br> Platform</h5>
                 </div>
             </a>
             <div class="box">
                 <img src="/assest/OLIVE/icon/Vector-1.png">
-                <h5>Learning Management System</h5>
+                <h5>Learning Management <br> System</h5>
             </div>
             <div class="box">
                 <img src="/assest/OLIVE/icon/Vector-2.png">
-                <h5>Creative Content Showcase</h5>
+                <h5>Creative Content <br> Showcase</h5>
             </div>
             <!-- <div class="box">
                 <a href="/auditions">
@@ -103,7 +103,7 @@
     <div class="" style="background-color: #fff;">
         <div class="footer_social">
             <div>
-                <p>&copy; 2021 GhenGhen Live</p>
+                <p><span style="color: #ddd;">&copy; 2021</span> GhenGhen </p>
             </div>
             <div class="social_icon">
                 <img src="/assest/OLIVE/fb.png" />
