--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Olive</title>
-    <link rel="stylesheet" href="styles/auth.css">
+    <title>GhenGhen</title>
+    <link rel="icon" href="/assest/OLIVE/logo.png">
+    <link rel=" stylesheet" href="styles/auth.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
@@ -87,7 +88,8 @@
                 <img class="youtubelogo" src="/assest/OLIVE/fontisto_youtube-play.png">
             </div> -->
 
-            <b style="margin-top: 10px;" class="content_header register_link_header">SIGN IN TO GhenGhen Live </b>
+            <b style="margin-top: 10px;" class="content_header register_link_header">SIGN IN TO <span
+                    style="color: goldenrod;">GhenGhen</span> </b>
             <form style="margin-bottom: 20px;" class="register_link" id="form">
                 <div class="number">
                     <!-- <label for="number">Please enter your phone number</label> -->
@@ -127,7 +129,8 @@
                 <button class="btn" id="submitBtn" type="submit">SIGN IN</button>
             </form>
 
-            <a style="color: goldenrod;" class="register" href="/signup">Register on GhenGhen NOW</a>
+            <a style="color: #ddd;" class="register" href="/signup">Register on <soan style="color: goldenrod;">GhenGhen
+                </soan> NOW</a>
             <p style="color: goldenrod;">or <span>LOG IN</span> with </p>
 
             <!-- <div class="otp_content">
@@ -171,6 +174,18 @@
 
 
         </section>
+        <div class="" style="background-color: #fff;">
+            <div class="footer_social">
+                <div>
+                    <p><span style="color: #ddd;">&copy; 2021</span> GhenGhen </p>
+                </div>
+                <div class="social_icon">
+                    <img src="/assest/OLIVE/fb.png" />
+                    <img src="/assest/OLIVE/instagram.png" />
+                    <img src="/assest/OLIVE/twitter.png" />
+                </div>
+            </div>
+        </div>
 
 
         <div class="bottom"></div>
