--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1 user-scalable=0">
-    <title>GhenGhen Live</title>
-    <link rel="stylesheet" href="/styles/auth.css">
+    <title>GhenGhen </title>
+    <link rel="icon" href="/assest/OLIVE/logo.png">
+    <link rel=" stylesheet" href="/styles/auth.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet"> -->
@@ -20,6 +21,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/intlTelInput.min.js"></script>
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/css/intlTelInput.min.css" />
@@ -33,7 +36,10 @@
     <div class="container">
         <header>
             <div class="logo">
-                <img src="/assest/OLIVE/logo.png" alt="">
+                <a href="/dashboard">
+
+                    <img src="/assest/OLIVE/logo.png" alt="">
+                </a>
             </div>
             <div class="icon">
                 <div class="user">
