--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,7 +17,7 @@
             </h1>
             <h5>Member since
             </h5>
-            <h3>✑</h3>
+            <h3></h3>
             <img id="editBtn" src="/assest/OLIVE/edit.png" width="30px" height="30px" alt="" srcset="">
 
         </div>
@@ -64,7 +64,7 @@
         <div class="" style="background-color: #fff;">
             <div class="footer_social">
                 <div>
-                    <p>&copy; 2020 GhenGhen Live</p>
+                    <p><span style="color: #ddd;">&copy; 2021</span> GhenGhen </p>
                 </div>
                 <div class="social_icon">
                     <img src="/assest/OLIVE/fb.png" />
