--- a/views/register.ejs
+++ b/views/register.ejs
@@ -97,10 +97,11 @@
 
 
     </section>
+
     <div class="" style="background-color: #fff;">
         <div class="footer_social">
             <div>
-                <p>&copy; 2021 GhenGhen Live</p>
+                <p><span style="color: #ddd;">&copy; 2021</span> GhenGhen </p>
             </div>
             <div class="social_icon">
                 <img src="/assest/OLIVE/fb.png" />
