--- a/public/styles/auth.css
+++ b/public/styles/auth.css
@@ -9,6 +9,7 @@
     box-sizing: border-box;
     -ms-overflow-style: none;
     
+    
 }
 a{
     text-decoration: none;
@@ -84,7 +85,7 @@ input#phone,.input {
 }
 header{
     min-height: 64px;
-    background: #FFFFFF;
+    background: #000;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -250,14 +251,14 @@ line-height: 156.5%;
     
 font-size: 18px;
 text-align: center;
-font-weight: 600;
+font-weight: 300;
 font-size: 16px;
 text-align: left;
 white-space: calc(100% + 1em);
 
 
 letter-spacing: 2px;
-color: rgba(218, 165, 32, 0.838);
+color: goldenrod;
 }
 
 .content_text strong{
@@ -442,8 +443,9 @@ background-color: goldenrod;
 .boxs{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
     place-items: center;
+    padding: 10px;
+    grid-gap: 30px;
     
 }
 .boxs a{
@@ -454,21 +456,35 @@ background-color: goldenrod;
 
 
 
+
 .box{
     width: 150px;
 height: 110px;
-background: rgb(24, 23, 23);
-border: 6px solid #FAB42B;
+background: #000;
+border: 1.8px solid #FAB42B;
 box-sizing: border-box;
-border-radius: 10px;
+border-radius: 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 10px;
     color: #fff;
-    font-size: 15px;
+    font-size: 12px;
+    font-weight: lighter;
 }
+.box:hover{
+    background: rgb(24, 23, 23);
+}
+
+.bo h5{
+    font-size: 12px;
+    font-weight: 200;
+}
+.bo{
+    height: calc(100% - 10px);
+}
+
 
 .audition{
     font-size: 13px;
@@ -611,8 +627,8 @@ gap: 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color:  #fff;
-    color: #000;
+    background-color:  #000;
+    color: goldenrod;
     padding: 5px;
     font-weight: 300;
 }
