--- a/views/auth.ejs
+++ b/views/auth.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1 user-scalable=0">
-    <title>GhenGhen Live</title>
+    <title>GhenGhen </title>
     <link rel="stylesheet" href="/styles/auth.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -191,10 +191,11 @@
 
         </section>
 
+
         <div class="" style="background-color: #fff;">
             <div class="footer_social">
                 <div>
-                    <p>&copy; 2021 GhenGhen Live</p>
+                    <p><span style="color: #ddd;">&copy; 2021</span> GhenGhen </p>
                 </div>
                 <div class="social_icon">
                     <img src="/assest/OLIVE/fb.png" />
