--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -63,9 +63,10 @@
     </section>
 
 
+
     <div class="footer_social">
         <div>
-            <p>&copy; 2021 GhenGhen Live</p>
+            <p><span style="color: #ddd;">&copy; 2021</span> GhenGhen </p>
         </div>
         <div class="social_icon">
             <img src="/assest/OLIVE/fb.png" />
