--- a/views/regSuccess.ejs
+++ b/views/regSuccess.ejs
@@ -65,7 +65,7 @@
         <div class="" style="background-color: #fff;">
             <div class="footer_social">
                 <div>
-                    <p>&copy; 2021 GhenGhen</p>
+                    <p><span style="color: #ddd;">&copy; 2021</span> GhenGhen </p>
                 </div>
                 <div class="social_icon">
                     <img src="/assest/OLIVE/fb.png" />
